<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivCaini"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_caini"
        android:scaleType="fitXY"
        android:src="@drawable/imagine_caine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/rasa"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCaini" />

    <TextView
        android:id="@+id/tvRasaCaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/rasa_caine"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rasa"
        app:layout_constraintStart_toEndOf="@id/rasa"
        app:layout_constraintTop_toTopOf="@+id/rasa" />

    <TextView
        android:id="@+id/varsta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/varsta"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rasa" />

    <TextView
        android:id="@+id/tvVarstaCaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/varsta_caine"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/varsta"
        app:layout_constraintStart_toEndOf="@+id/varsta"
        app:layout_constraintTop_toTopOf="@+id/varsta" />

    <TextView
        android:id="@+id/ani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/ani"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvVarstaCaine"
        app:layout_constraintStart_toEndOf="@+id/tvVarstaCaine"
        app:layout_constraintTop_toBottomOf="@+id/tvVarstaCaine" />

    <TextView
        android:id="@+id/nume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/nume"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/varsta" />

    <TextView
        android:id="@+id/tvNumeCaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/nume_caine"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nume"
        app:layout_constraintStart_toEndOf="@id/nume"
        app:layout_constraintTop_toTopOf="@+id/nume" />

    <TextView
        android:id="@+id/descriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/descriere"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeCaine" />

    <TextView
        android:id="@+id/tvDescriereCaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/descriere_caine"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriere"/>
</androidx.constraintlayout.widget.ConstraintLayout>