<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar" />
    <ImageView
        android:id="@+id/ivCaini"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/content_caini"
        android:scaleType="fitXY"
        android:src="@drawable/imagine_caine"
        app:layout_constraintEnd_toStartOf="@+id/ivPisici"
        app:layout_constraintStart_toStartOf="@+id/my_toolbar"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

    <ImageView
        android:id="@+id/ivPisici"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/content_pisici"
        android:scaleType="fitXY"
        android:src="@drawable/imagine_pisici"
        app:layout_constraintEnd_toEndOf="@id/my_toolbar"
        app:layout_constraintStart_toEndOf="@+id/ivCaini"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

    <TextView
        android:id="@+id/tvCaini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caini"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toEndOf="@+id/ivCaini"
        app:layout_constraintStart_toStartOf="@+id/ivCaini"
        app:layout_constraintTop_toBottomOf="@+id/ivCaini" />

    <TextView
        android:id="@+id/tvPisici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/pisici"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivPisici"
        app:layout_constraintStart_toStartOf="@+id/ivPisici"
        app:layout_constraintTop_toBottomOf="@+id/ivPisici" />
</androidx.constraintlayout.widget.ConstraintLayout>